--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 
 <body>
     <h1>Hi, Welcome to our TheCricPage</h1>
+    <h2>Click here for IPL 2024</h2>
+    <a href="https://iplt20.com">link</a>
+    <p>The Indian Premier League (IPL) 2024 Player Auction will feature 333 cricketers who are scheduled to go under the gavel in Dubai at the Coca-Cola Arena on December 19th, 2023.
+
+        Out of 333 players, 214 are Indians and 119 are overseas players of which 2 players are from associate nations. The total capped players are 116, uncapped players are 215 and 2 from associate nations. A maximum of 77 slots are now available with up to 30 being slotted for overseas players.
+        
+        The Auction will start at 1:00 PM IST</p>
+
+    <img src="https://assets.iplt20.com/bcci/articles/1685126661__AI_1586.jpg" alt="">
 </body>
 
 </html>
